src/map-app/src/style.css
/*
 *
 * Tyylimäärittelyjä
 *
 * 
 *
 */

 
/* 
.box {
  display: flex;
  flex-flow: column;
  height: 100%;
} */

/* .map_container {
  height: 600px;
  /* The height is 600 pixels */
  /* width: 100%; */
  /* The width is the width of the web page */
/*} */

@font-face {
  font-family: Donau;
  src: url("fonts/donau.otf") format("opentype");
}

body {
  height: 100%;
  margin: 0;
}

.app {
  display: flex;
  flex-flow: column;
  height: 100vh;
  flex: 75%;
}

.app .top_bar {
  flex: 0 1 auto;
}

.app .weather_tab {
  flex: 1 1 auto;
  height: 100vh; /*calc(100vh - 55px);*/
  overflow-y: scroll;
  width: 75vw;
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: 4;
  background: linear-gradient(135deg, #1C4777, #B8C1E0, #539BD5);
}

.app .map_container {
  flex: 1 1 auto;
  height: 100vh /*calc(100vh - 55px);*/
}

.map {
  flex: 1 1 auto;
  height: 100vh; /*calc(100vh - 55px);*/
}

.info {
  background-color: rgb(255, 255, 255);
  max-width: 750px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  z-index: 1;
  margin: auto;
  position: absolute;
  top: 0px;
  left: 0px;
}

.app .snow_tab {
  flex: 1 1 auto;
  height: 100vh;
  z-index: 4;
  position: absolute;
  overflow-y: scroll;
  width: 75vw;
  background-color: white;
}

.maplibregl-ctrl-bottom-right {
  position: absolute;
  bottom: 60px;
  right: 5px;
}

.bottom_navigation {
  z-index: 5;
}

.root {
  display: flex;
  width: 100vw;
}

.welcome_view {
  flex: 25%;
}

.app .login_icon {
  position: absolute;
  top: 5px;
  right: 5px;
}
.app .management_view {
  flex: 1 1 auto;
  height: 100vh;
  z-index: 3;
  overflow-y: scroll;
  width: 75vw;
  position: absolute;
  background-color: white;
}

/* Styling for mobile devices */
@media (max-width: 900px) {
  .app .management_view {
    width: 100vw;
  }

  .app .snow_tab {
    width: 100vw;
  }

  .app .map_container {
    width: 100vw;
  }

  .app .weather_tab {
    width: 100vw;
  }

  .welcome_view {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100vw;
    height: 100vh;
    z-index: 6;
  }
}

/*
* Style for scrollbars
*/
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background:rgba(255, 255, 255, 0); 
}
 
::-webkit-scrollbar-thumb {
  background: #888; 
}

::-webkit-scrollbar-thumb:hover {
  background: #555; 
}

/* .map {
  height: 600px; */
  /* The height is 600 pixels */
  /* width: 100%; */
  /* The width is the width of the web page */
/* } */

